--- a/5. Rentabilité.ipynb
+++ b/5. Rentabilité.ipynb
@@ -10,22 +10,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import module_projet as md\n",
-    "from geopy.geocoders import Nominatim"
+    "from geopy.geocoders import Nominatim\n",
+    "import osmnx as ox\n",
+    "import networkx as nx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import module_projet as md"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_graph(loc, dist, transport_mode, loc_type=\"address\"):\n",
+    "###Transport mode = ‘walk’, ‘bike’, ‘drive’, ‘drive_service’, ‘all’, ‘all_private’, ‘none’\n",
+    "    if loc_type == \"address\":\n",
+    "        G = ox.graph_from_address(loc, dist=dist, network_type=transport_mode)\n",
+    "    elif loc_type == \"points\":\n",
+    "        G = ox.graph_from_point(loc, dist=dist, network_type=transport_mode )\n",
+    "    return G"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = create_graph(\"Paris\", 10000, \"drive\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = ox.add_edge_speeds(G)\n",
+    "G = ox.add_edge_travel_times(G)\n",
+    "G = ox.distance.add_edge_lengths(G) #on va utiliser cette pondération par la suite car nous souhaitions obtenir la longueur du chemin sous la forme d'une distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def itinéraire(position, station):\n",
+    "    a,b = position\n",
+    "    x,y = station\n",
+    "    start_node = ox.nearest_nodes(G, a,b) #trouve le noeud du graphe le plus proche de la position\n",
+    "    end_node = ox.nearest_nodes(G, x,y) \n",
+    "    route = nx.shortest_path(G, start_node, end_node, weight='length') #trouve le plus court chemin\n",
+    "    length = nx.shortest_path_length(G, source=start_node, target=end_node, weight='length', method=\"dijkstra\") #trouve la longueur de ce chemin\n",
+    "    return(route, length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def x_plus_proche(data, position , carb, nbr_stations):\n",
+    "    data_mask = data['Nom Officiel Région']=='Île-de-France'\n",
+    "    data_1 = data[data_mask]\n",
+    "    data_2 = md.data_carb(data_1, carb, ['adresse', 'ville', 'prix_valeur', 'prix_nom', 'geom'])\n",
+    "    pos = list(map(float,md.Adresse_to_gps2(position).split(',')))\n",
+    "    def iti(station):\n",
+    "        pos_sta = list(map(float, station.split(',')))\n",
+    "        a = pos_sta[0]\n",
+    "        pos_sta[0] = pos_sta[1]\n",
+    "        pos_sta[1] = a\n",
+    "        return(itinéraire(pos, pos_sta)[1])\n",
+    "    vector = data_2['geom'].apply(iti).sort_values().head(nbr_stations)\n",
+    "    return(vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = (2.3592784,48.8555424)\n",
+    "end = (2.378077,48.916340)\n",
+    "route = itinéraire(start, end)[0]\n",
+    "ox.plot_graph_route(G, route)"
    ]
   },
   {
@@ -38,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,29 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_test=df_renta.sample(50) #à remplacer par le df contentenant les plus proches stations\n",
-    "df_opti=df_test.assign(cout=1) #nouvelle colonne avec le cout du plein en tenant compte du trajet et du prix\n",
-    "\n",
-    "def prix_plein(Quantité, position, station) : \n",
-    "    A = list(map(float,position.split(',')))\n",
-    "    B = list(map(float,df_opti.iloc[station,2].split(',')))\n",
-    "    \n",
-    "    D= md.distanceGPS(A,B)/100    #calcul de la distance avec la station \n",
-    "    conso_trajet=D*0.06 #calcul du nb de litre d'essence necessaire pour aller a la station\n",
-    "    P=Quantité+conso_trajet #calcul du nb de litre necessaire pour faire le plein après le trajet\n",
-    "    prix_L=df_opti.iloc[station,3] #prix au litre à la station\n",
-    "    px_plein=prix_L*P #prix du plein de base + prix du trajet\n",
-    "    return px_plein\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,11 +233,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'itinéraire' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m position\u001b[39m=\u001b[39mmd\u001b[39m.\u001b[39mAdresse_to_gps(adresse) \u001b[39m#on sort cette ligne de la boucle, sinon le package \"Nomatim\" nous bloque pour usage trop récurrent\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(df_opti)) : \n\u001b[1;32m----> 3\u001b[0m     C\u001b[39m=\u001b[39mprix_plein(\u001b[39m50\u001b[39;49m,position,i) \u001b[39m#on calcule le prix du plein pour chaque station\u001b[39;00m\n\u001b[0;32m      4\u001b[0m     df_opti\u001b[39m.\u001b[39miloc[i,\u001b[39m5\u001b[39m]\u001b[39m=\u001b[39mC \u001b[39m#on ajoute ce prix dans le dataframe\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[6], line 5\u001b[0m, in \u001b[0;36mprix_plein\u001b[1;34m(Quantité, position, station)\u001b[0m\n\u001b[0;32m      2\u001b[0m A \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mmap\u001b[39m(\u001b[39mfloat\u001b[39m,position\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m)))\n\u001b[0;32m      3\u001b[0m B \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mmap\u001b[39m(\u001b[39mfloat\u001b[39m,df_opti\u001b[39m.\u001b[39miloc[station,\u001b[39m2\u001b[39m]\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m)))\n\u001b[1;32m----> 5\u001b[0m R,Dist\u001b[39m=\u001b[39m itinéraire(A,B)   \u001b[39m#calcul de la distance avec la station \u001b[39;00m\n\u001b[0;32m      6\u001b[0m D\u001b[39m=\u001b[39mDist\u001b[39m/\u001b[39m\u001b[39m1000\u001b[39m \u001b[39m#on converti la distance en kilomètre\u001b[39;00m\n\u001b[0;32m      7\u001b[0m conso_trajet\u001b[39m=\u001b[39mD\u001b[39m*\u001b[39m\u001b[39m0.06\u001b[39m \u001b[39m#calcul du nb de litre d'essence necessaire pour aller a la station\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'itinéraire' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "position=Adresse_to_gps(adresse) #on sort cette ligne de la boucle, sinon le package \"Nomatim\" nous bloque pour usage trop récurrent\n",
+    "position=md.Adresse_to_gps(adresse) #on sort cette ligne de la boucle, sinon le package \"Nomatim\" nous bloque pour usage trop récurrent\n",
     "for i in range(len(df_opti)) : \n",
     "    C=prix_plein(50,position,i) #on calcule le prix du plein pour chaque station\n",
     "    df_opti.iloc[i,5]=C #on ajoute ce prix dans le dataframe\n"
@@ -382,7 +459,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -396,12 +473,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "cc7739b244f974916000a7d8eb95217d7b293019de62b65f8f3aaabbca2f3ce9"
+    "hash": "ee4c60ed9f2d143d855c3de7cdf8e81ef9399a07140d5084c19be7d5d534dff2"
    }
   }
  },
