--- a/5. Rentabilité.ipynb
+++ b/5. Rentabilité.ipynb
@@ -316,23 +316,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                      adresse  ville             geom  prix_valeur prix_nom  \\\n",
-      "6472  175 Avenue Ledru-Rollin  PARIS  48.85667,2.3791         2.49   Gazole   \n",
+      "               adresse         ville                          geom  \\\n",
+      "3540  ZONE DES MASSIES  COUFFOULLEUX  48.858858899999994,2.3470599   \n",
       "\n",
-      "       cout  \n",
-      "6472  124.5  \n"
+      "      prix_valeur prix_nom   cout  \n",
+      "3540        1.729   Gazole  86.45  \n"
      ]
     }
    ],
    "source": [
-    "df_optio=df_opti.sort_values('cout')\n",
+    "df_opti=df_opti.sort_values('cout')\n",
     "print(df_opti.head(1)) #station la plus rentable"
    ]
   }
